--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="org.wit.archaeologicalfieldwork">
 
     <application
+            android:name="org.wit.archaeologicalfieldwork.main.MainApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -10,20 +11,21 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-                android:name=".SplashScreenActivity"
-                android:noHistory="true"
-                android:theme="@style/SplashTheme">
+            android:name=".activities.SplashScreenActivity"
+            android:noHistory="true"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity">
+        <activity
+            android:name=".activities.LoginActivity">
         </activity>
-        <activity android:name=".ListOfSitesActivity">
+        <activity
+            android:name=".activities.SiteActivity">
         </activity>
-
+        <activity android:name=".activities.SiteListActivity">
+        </activity>
     </application>
-
 </manifest>
