--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activities.RegisterActivity">
+        <activity android:name=".activities.RegisterActivity">
         </activity>
         <activity android:name=".activities.LoginActivity">
         </activity>
