--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.wit.archaeologicalfieldwork">
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
-            android:name="org.wit.archaeologicalfieldwork.main.MainApp"
+            android:name=".main.MainApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -11,10 +17,9 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-            android:name=".activities.SplashScreenActivity"
-            android:noHistory="true"
-            android:theme="@style/SplashTheme">
-
+                android:name=".activities.SplashScreenActivity"
+                android:noHistory="true"
+                android:theme="@style/SplashTheme">
         </activity>
         <activity android:name=".activities.RegisterActivity">
         </activity>
@@ -23,6 +28,7 @@
         <activity android:name=".activities.SiteListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -30,9 +36,26 @@
                 android:name=".activities.SiteActivity"
                 android:parentActivityName=".activities.SiteListActivity">
             <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.SiteListActivity">
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".activities.SiteListActivity">
             </meta-data>
         </activity>
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_maps_key"/>
+
+        <activity
+                android:name=".activities.MapsActivity"
+                android:label="@string/title_activity_maps">
+        </activity>
     </application>
+
 </manifest>
