--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.wit.archaeologicalfieldwork">
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -55,6 +56,11 @@
         <activity
                 android:name=".activities.MapsActivity"
                 android:label="@string/title_activity_maps">
+        </activity>
+        <activity
+                android:name=".activities.SiteMapsActivity"
+                android:label="@string/title_activity_site_maps"
+                android:theme="@style/AppTheme">
         </activity>
     </application>
 
