--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,23 +18,29 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-                android:name=".activities.SplashScreenActivity"
+                android:name=".views.SplashScreenActivity"
                 android:noHistory="true"
                 android:theme="@style/SplashTheme">
+
         </activity>
-        <activity android:name=".activities.RegisterActivity">
+        <activity android:name=".views.login_register.RegisterView">
+
         </activity>
-        <activity android:name=".activities.LoginActivity">
+        <activity android:name=".views.login_register.LoginView">
         </activity>
-        <activity android:name=".views.sitelist.SiteListView">
+        <activity android:name=".views.sitelist.SiteListView"
+                  android:label="@string/title_activity_site_list"
+                  android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
+
         </activity>
         <activity
                 android:name=".views.site.SiteView"
+                android:label="@string/title_activity_site"
                 android:parentActivityName=".views.sitelist.SiteListView">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
@@ -56,12 +62,14 @@
 
         <activity
                 android:name=".views.editlocation.EditLocationView"
-                android:label="@string/title_activity_maps">
+                android:label="@string/title_activity_edit_location">
         </activity>
         <activity
                 android:name=".views.map.SiteMapView"
                 android:label="@string/title_activity_site_maps"
                 android:theme="@style/AppTheme">
+        </activity>
+        <activity android:name=".views.settings.SettingsView">
         </activity>
     </application>
 
