--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation "androidx.room:room-runtime:2.0.0"
     implementation 'com.android.support:preference-v7:28.0.0'
     implementation "com.github.bumptech.glide:glide:4.8.0"
+    implementation "com.google.firebase:firebase-database:16.0.1"
+    implementation "com.google.firebase:firebase-storage:16.0.1"
     kapt "androidx.room:room-compiler:2.0.0"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
