--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,22 +21,21 @@
                 android:name=".views.SplashScreenActivity"
                 android:noHistory="true"
                 android:theme="@style/SplashTheme">
-
-        </activity>
-        <activity android:name=".views.login_register.RegisterView">
-
-        </activity>
-        <activity android:name=".views.login_register.LoginView">
-        </activity>
-        <activity android:name=".views.sitelist.SiteListView"
-                  android:label="@string/title_activity_site_list"
-                  android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-
-
+        </activity>
+        <activity android:name=".views.login_register.RegisterView">
+        </activity>
+        <activity android:name=".views.login_register.LoginView">
+        </activity>
+        <activity android:name=".views.favourite.FavouriteView"
+                  android:launchMode="singleTop">
+        </activity>
+        <activity android:name=".views.sitelist.SiteListView"
+                  android:label="@string/title_activity_site_list"
+                  android:launchMode="singleTop">
         </activity>
         <activity
                 android:name=".views.site.SiteView"
@@ -46,20 +45,10 @@
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value=".views.sitelist.SiteListView">
             </meta-data>
-
         </activity>
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
-        -->
         <meta-data
                 android:name="com.google.android.geo.API_KEY"
                 android:value="@string/google_maps_key"/>
-
         <activity
                 android:name=".views.editlocation.EditLocationView"
                 android:label="@string/title_activity_edit_location">
